--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,11 @@
 }
 
 
+body::-webkit-scrollbar {
+    width: 0px;
+}
+
+
 .image-fit-content {
     width: 100%;
     height: 100%;
@@ -24,8 +29,9 @@
 .change-maker-container {
     width: 100vw;
     height: 100vh;
-    background-color: lightgray;
+    padding-top: 4rem;
 }
+
 
 .navigation-bar {
     padding: 0.6rem 4rem;
@@ -33,6 +39,13 @@
     align-items: center;
     justify-content: space-between;
     background: linear-gradient(270deg, #FFAA33 5.77%, #FEEED7 100%);
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    backdrop-filter: blur(10px);
+    z-index: 1000;
+    transition: all 0.3s ease;
 
 }
 
@@ -77,19 +90,70 @@
 
 .section-first-container {
     width: 100%;
-    background-color: lightblue;
-    padding: 1rem 6rem;
+    border-bottom: 1px solid red;
+    padding: 2rem 6rem;
     display: grid;
     grid-template-columns: 1fr 40%;
     gap: 1rem;
 }
 
 .inner-section-container {
-    border: 1px solid black;
-    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    gap: 3rem;
 }
 
 .inner-section-image {
-    border: 1px solid black;
-    padding: 10px;
+    /* border: 1px solid black;
+    padding: 10px; */
+
+}
+
+.title-section-container {}
+
+.description-smoll-words-title {
+    font-weight: 400;
+    font-size: 21px;
+    color: #444444;
+
+}
+
+.button-changes-container {
+    display: flex;
+    gap: 1rem;
+}
+
+.title-section-1 {
+    font-weight: 500;
+    font-style: Medium;
+    font-size: 40px;
+    line-height: 3.4rem;
+    color: #111111;
+}
+
+.become-change-btn {
+    background-color: #FFC067;
+    font-weight: 400;
+    font-size: 20px;
+    color: #111111;
+    padding: 10px 10px;
+    border-radius: 6px;
+    border: none;
+}
+
+.how-this-works-btn {
+    border: 2px solid #FF9503;
+    padding: 10px 10px;
+    font-weight: 400;
+    font-size: 17px;
+    color: #111111;
+    background-color: transparent;
+    border-radius: 6px;
+}
+
+.section-second-container {
+    width: 100%;
+    height: 90vh;
+    background: linear-gradient(180deg, #FFFFFF 30.29%, #FFE6A1 100%);
+
 }
