--- a/css/style.css
+++ b/css/style.css
@@ -153,7 +153,27 @@ body::-webkit-scrollbar {
 
 .section-second-container {
     width: 100%;
-    height: 90vh;
+    height: 85vh;
     background: linear-gradient(180deg, #FFFFFF 30.29%, #FFE6A1 100%);
+    display: grid;
+    grid-template-rows: auto 1fr;
+    gap: 1rem;
+    padding: 1rem 6rem;
+}
 
+.index-features-container {
+    border: 2px solid #FFD666;
+    padding: 10px;
+    border-radius: 6px;
+}
+
+.reallives-change-text {
+    font-weight: 500;
+    font-size: 28px;
+    color: #111111;
+}
+
+.image-features-section {
+    border: 1px solid black;
+    padding: 10px;
 }
