--- a/css/style.css
+++ b/css/style.css
@@ -90,7 +90,6 @@ body::-webkit-scrollbar {
 
 .section-first-container {
     width: 100%;
-    border-bottom: 1px solid red;
     padding: 2rem 6rem;
     display: grid;
     grid-template-columns: 1fr 40%;
@@ -139,6 +138,7 @@ body::-webkit-scrollbar {
     padding: 10px 10px;
     border-radius: 6px;
     border: none;
+    cursor: pointer;
 }
 
 .how-this-works-btn {
@@ -149,22 +149,25 @@ body::-webkit-scrollbar {
     color: #111111;
     background-color: transparent;
     border-radius: 6px;
+    cursor: pointer;
 }
 
 .section-second-container {
     width: 100%;
-    height: 85vh;
     background: linear-gradient(180deg, #FFFFFF 30.29%, #FFE6A1 100%);
     display: grid;
     grid-template-rows: auto 1fr;
-    gap: 1rem;
+    gap: 2rem;
     padding: 1rem 6rem;
 }
 
 .index-features-container {
     border: 2px solid #FFD666;
-    padding: 10px;
+    padding: 4rem 4rem;
     border-radius: 6px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .reallives-change-text {
@@ -174,6 +177,6 @@ body::-webkit-scrollbar {
 }
 
 .image-features-section {
-    border: 1px solid black;
-    padding: 10px;
+    width: 100%;
+    height: 100%;
 }
