--- a/css/style.css
+++ b/css/style.css
@@ -14,8 +14,8 @@ body::-webkit-scrollbar {
 
 
 .image-fit-content {
-    width: 100%;
-    height: 100%;
+    width: 90%;
+    height: 90%;
     object-fit: contain;
 }
 
@@ -90,7 +90,7 @@ body::-webkit-scrollbar {
 
 .section-first-container {
     width: 100%;
-    padding: 2rem 6rem;
+    padding: 6rem 6rem 2rem 6rem;
     display: grid;
     grid-template-columns: 1fr 40%;
     gap: 1rem;
@@ -99,7 +99,7 @@ body::-webkit-scrollbar {
 .inner-section-container {
     display: flex;
     flex-direction: column;
-    gap: 3rem;
+    gap: 1.7rem;
 }
 
 .inner-section-image {
@@ -111,8 +111,8 @@ body::-webkit-scrollbar {
 .title-section-container {}
 
 .description-smoll-words-title {
-    font-weight: 400;
-    font-size: 21px;
+    font-weight: 300;
+    font-size: 28px;
     color: #444444;
 
 }
@@ -120,12 +120,13 @@ body::-webkit-scrollbar {
 .button-changes-container {
     display: flex;
     gap: 1rem;
+    margin-top: 2rem;
 }
 
 .title-section-1 {
     font-weight: 500;
     font-style: Medium;
-    font-size: 40px;
+    font-size: 52px;
     line-height: 3.4rem;
     color: #111111;
 }
@@ -158,7 +159,7 @@ body::-webkit-scrollbar {
     display: grid;
     grid-template-rows: auto 1fr;
     gap: 2rem;
-    padding: 1rem 6rem;
+    padding: 0.5rem 6rem 6rem 6rem;
 }
 
 .index-features-container {
@@ -168,6 +169,7 @@ body::-webkit-scrollbar {
     display: flex;
     align-items: center;
     justify-content: center;
+    box-shadow: 0 0 5px rgb(194, 194, 194);;
 }
 
 .reallives-change-text {
@@ -216,7 +218,7 @@ body::-webkit-scrollbar {
 }
 
 .changes-maker-section-index {
-    padding: 1rem 6rem;
+    padding: 1rem 6rem 6rem 6rem;
     background: linear-gradient(180deg, #FFE6A1 30.29%, #FFFFFF 100%);
     display: flex;
     flex-direction: column;
@@ -224,7 +226,7 @@ body::-webkit-scrollbar {
 }
 
 .experience-text-reallives {
-    font-weight: 600;
+    font-weight: 4  00;
     font-size: 28px;
     color: #111111;
     text-align: center;
@@ -273,7 +275,7 @@ body::-webkit-scrollbar {
 }
 
 .btn-larne-more {
-    padding-left: 6rem;
+    padding: 1rem 6rem 2rem 6rem;
 }
 
 .university-image-box {
@@ -306,12 +308,12 @@ body::-webkit-scrollbar {
     font-size: 18px;
     color: #111111;
     border-radius: 6px;
-    border: 1px solid #A3A3A3;
+    border: 1px solid #c1c1c1;
     background-color: white;
 }
 
 .container-benifit-school {
-    padding: 2rem 6rem;
+    padding: 4rem 6rem 4rem 7rem;
     background-color: #FFF0DA;
     display: grid;
     grid-template-rows: auto 1fr;
@@ -341,7 +343,7 @@ body::-webkit-scrollbar {
 .top-benfit-header {
     display: flex;
     align-items: center;
-    gap: 1rem;
+    gap: 0.5rem;
 }
 
 .bottom-data-benifit {
