--- a/css/style.css
+++ b/css/style.css
@@ -384,7 +384,10 @@ body::-webkit-scrollbar {
 
 .footer-section-2 {
     border: 1px solid black;
-    padding: 10px
+    padding: 10px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 1rem;
 }
 
 .footer-descritpion-text {
@@ -396,6 +399,4 @@ body::-webkit-scrollbar {
     font-weight: 400;
     font-size: 18px;
     color: #4D4D4D;
-
-
 }
