--- a/css/style.css
+++ b/css/style.css
@@ -83,7 +83,7 @@ body::-webkit-scrollbar {
 
 .navigation-text-style {
     font-weight: 400;
-    font-size: 16px;
+    font-size: 17px;
     color: black;
     text-decoration: none;
 }
@@ -365,6 +365,90 @@ body::-webkit-scrollbar {
 
 }
 
+/* dropdown css  */
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropbtn {
+    background-color: transparent;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    gap: 6px;
+    transition: background-color 0.3s ease;
+}
+
+.arrow {
+    display: inline-block;
+    transition: transform 0.3s ease;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    top: 2rem;
+    left: 0;
+    background-color: white;
+    min-width: max-content;
+    box-shadow: 0px 0px 2px 0px #00000040;
+    border: 1px solid #D5D5D5;
+    border-radius: 8px;
+    padding: 15px 2rem;
+    z-index: 10;
+    animation: fadeIn 0.3s ease;
+    text-align: start;
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+        transform: translateY(-5px);
+    }
+
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+.dropdown:hover .arrow {
+    transform: rotate(180deg);
+}
+
+.dropdown-content a {
+    display: block;
+    text-decoration: none;
+    color: #333;
+    font-size: 17px;
+    margin: 8px 0;
+    padding: 8px 0;
+}
+
+.dropdown-content a:hover {
+    color: #007bff;
+}
+
+.span-flex-style {
+    display: flex;
+    flex-direction: column;
+}
+
+.dropdown-border {
+    border-bottom: 1px solid #D5D5D5;
+    padding-bottom: 10px;
+}
+
+/* dropdown css  */
+
 .footer-container {
     width: 100%;
     height: 40vh;
@@ -382,8 +466,6 @@ body::-webkit-scrollbar {
 }
 
 .footer-section-2 {
-    /* border: 1px solid black;
-    padding: 10px; */
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 1rem;
@@ -395,6 +477,7 @@ body::-webkit-scrollbar {
     font-weight: 400;
     font-size: 18px;
     color: #4D4D4D;
+    line-height: 25px;
 }
 
 .label-footer-button-box {
