--- a/css/style.css
+++ b/css/style.css
@@ -14,8 +14,8 @@ body::-webkit-scrollbar {
 
 
 .image-fit-content {
-    width: 90%;
-    height: 90%;
+    width: 100%;
+    height: 100%;
     object-fit: contain;
 }
 
@@ -391,14 +391,13 @@ body::-webkit-scrollbar {
 .dropdown-content {
     display: none;
     position: absolute;
-    top: 2rem;
-    left: 0;
+    top: 1.4rem;
     background-color: white;
     min-width: max-content;
     box-shadow: 0px 0px 2px 0px #00000040;
     border: 1px solid #D5D5D5;
     border-radius: 8px;
-    padding: 15px 2rem;
+    padding: 15px 1.5rem;
     z-index: 10;
     animation: fadeIn 0.3s ease;
     text-align: start;
@@ -505,3 +504,68 @@ body::-webkit-scrollbar {
     flex-direction: column;
     gap: 1rem;
 }
+
+/* tab css  */
+
+.home-container {
+    display: flex;
+    flex-direction: column;
+    display: none;
+}
+
+.about-container {
+    width: 100vw;
+    /* display: none; */
+
+}
+
+.competencies-backgroudn-image {
+    padding-top: 1rem;
+}
+
+.data-container-rcmi-main {
+    padding: 10px;
+    height: 90vh;
+    background-color: #FFF7EC;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 1rem;
+    padding: 2rem 6rem;
+}
+
+.rcmi-data-left-bar {
+    display: grid;
+    grid-template-rows: repeat(2, 1fr);
+    gap: 1rem;
+}
+
+.tow-box-rcmi {
+    background-color: white;
+    box-shadow: 0px 0px 8px 0px #00000040;
+    border-radius: 6px;
+    display: grid;
+    grid-template-rows: auto 1fr;
+    gap: 1rem;
+    padding: 1rem 1rem;
+}
+
+.rcmi-data-right-bar {
+    box-shadow: 0px 0px 8px 0px #00000040;
+    background-color: white;
+    border-radius: 6px;
+}
+
+.flex-colume-what-rcmi {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.rcmi-info-data-text {
+    font-weight: 400;
+    font-size: 18px;
+    color: #262626;
+    line-height: 26px;
+}
+
+/* tab css  */
