--- a/css/style.css
+++ b/css/style.css
@@ -516,7 +516,6 @@ body::-webkit-scrollbar {
 .about-container {
     width: 100vw;
     /* display: none; */
-
 }
 
 .competencies-backgroudn-image {
@@ -580,7 +579,7 @@ body::-webkit-scrollbar {
 }
 
 .how-to-works-rcmi-container-inner {
-    padding: 1rem;
+    padding: 1.5rem;
     height: 100%;
     box-shadow: 0px 0px 8px 0px #00000040;
     background-color: #DAE5EA;
@@ -664,16 +663,15 @@ body::-webkit-scrollbar {
 
 .changemaker-journey-container {
     width: 100%;
-    height: 80vh;
     background-color: #FFE5C5;
 }
 
 .child-changemaker-container {
-    background-color: lightblue;
-    height: 60vh;
     display: flex;
-    justify-content: center;
+    align-items: center;
+    flex-direction: column;
     padding: 2rem 1rem;
+    gap: 3rem;
 }
 
 .top-child-changemaker {
@@ -702,7 +700,123 @@ body::-webkit-scrollbar {
     font-size: 20px;
     color: #333333;
     text-align: center;
+}
 
+.changemaker-journey-background-image {
+    /* border: 1px solid black;
+    padding: 10px; */
+}
+
+.point-cards-container {
+    width: 100%;
+    padding: 0rem 5rem;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 2rem;
+}
+
+.point-cards-inner {
+    padding: 2rem;
+    text-align: center;
+    display: grid;
+    grid-template-rows: auto auto 1fr;
+    gap: 1.4rem;
+}
+
+.first-box-point {
+    box-shadow: 0px 0px 4px 0px #00000040;
+    background-color: #E6F1DA;
+    border-radius: 6px;
+}
+
+
+.second-box-point {
+    box-shadow: 0px 0px 4px 0px #00000040;
+    background-color: #DAEAC8;
+    border-radius: 6px;
+}
+
+
+.therd-box-point {
+    box-shadow: 0px 0px 4px 0px #00000040;
+    background-color: #CDE2B6;
+    border-radius: 6px;
+}
+
+
+.four-box-point {
+    box-shadow: 0px 0px 4px 0px #00000040;
+    background-color: #C1DBA3;
+    border-radius: 6px;
+}
+
+
+.five-box-point {
+    box-shadow: 0px 0px 4px 0px #00000040;
+    background-color: #A8CD7F;
+    border-radius: 6px;
+}
+
+.point-cards-container-2 {
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 2rem;
+    padding: 0rem 18rem;
+}
+
+.stage-title-text {
+    font-weight: 600;
+    font-size: 20px;
+    color: #000000;
+}
+
+.stage-title-2 {
+    font-weight: 300;
+    font-style: Italic;
+    font-size: 18px;
+    color: #000000;
+}
+
+.stage-description-text {
+    font-weight: 400;
+    font-size: 18px;
+    text-align: center;
+    color: #333333;
+    line-height: 26px;
+}
+
+.begin-your-changemaker-container {
+    background-color: #F0F0F0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+    padding: 2rem 1rem;
+}
+
+
+.make-decision-skill-text {
+    font-weight: 600;
+    font-size: 28px;
+    color: #111111;
+}
+
+
+.becomechanage-maker-style {
+    text-decoration: none;
+}
+
+.becomechanage-maker {
+    padding: 10px;
+    width: max-content;
+    margin-top: 3%;
+    background-color: #ffc067;
+    border-radius: 6px;
+    font-weight: 500;
+    font-size: 20px;
+    color: #111111;
 }
 
 /* tab css  */
