--- a/css/style.css
+++ b/css/style.css
@@ -1315,7 +1315,32 @@ body::-webkit-scrollbar {
 
 /* .contact page  */
 
+.contact-flex-colume {
+    display: flex !important;
+    flex-direction: column !important;
+    gap: 2rem !important;
+}
 
+.contact-iteam-override {
+    margin-bottom: 0px !important;
+}
+
+.text-start {
+    text-align: start !important;
+}
+
+.section-title {
+    font-size: 1.5rem !important;
+    font-weight: 500;
+    text-align: center;
+    margin-bottom: var(--spacing-lg);
+    color: var(--neutral-900);
+    line-height: 1.2;
+}
+
+.btn-padding-primary {
+    padding: 0.8rem 3rem !important;
+}
 
 /* .contact page  */
 
