--- a/css/style.css
+++ b/css/style.css
@@ -409,7 +409,7 @@ body::-webkit-scrollbar {
 /* TAB CODE */
 .nav-link {
     text-decoration: none;
-    color: var(--neutral-700);
+    color: #222222;
     /* font-weight: 500; */
     transition: color 0.2s ease;
     position: relative;
@@ -417,7 +417,8 @@ body::-webkit-scrollbar {
 
 .nav-link.active {
     /* color: var(--primary-blue); */
-    color: #30a5b7 !important;
+    color: #222222!important;
+    text-decoration: underline;
 }
 
 .tab-panel {
@@ -460,7 +461,7 @@ body::-webkit-scrollbar {
 }
 
 .dropdown-content a:hover {
-    color: #007bff;
+    color: #222222;
 }
 
 .span-flex-style {
