--- a/css/contact.css
+++ b/css/contact.css
@@ -281,13 +281,20 @@ body {
 }
 
 .btn-lg {
-    display: inline-flex;
+    display: flex;
     align-items: center;
     transition: all 0.2s ease;
     border: none;
     cursor: pointer;
-    font-size: 1rem;
+    font-size: 1rem !important;
     line-height: 1.5;
     border-radius: 6px;
     background-color: #FFBF6780;
+    gap: 10px;
+    font-weight: 500;
+    color: #00000080 !important;
+}
+
+.send-color {
+    color: #00000080 !important;
 }
