--- a/css/style.css
+++ b/css/style.css
@@ -424,7 +424,7 @@ body::-webkit-scrollbar {
 
 .nav-link.active {
     /* color: var(--primary-blue); */
-    color: #222222!important;
+    color: #222222 !important;
     text-decoration: underline;
     text-underline-offset: 7px;
 }
@@ -1354,7 +1354,7 @@ body::-webkit-scrollbar {
 }
 
 .btn-padding-primary {
-    padding: 0.8rem 3rem !important;
+    padding: 0.8rem 1rem !important;
 }
 
 /* .contact page  */
@@ -1715,6 +1715,11 @@ body::-webkit-scrollbar {
 }
 
 @media (max-width: 375px) {
+
+    .right-side-bar {
+        display: none;
+    }
+
     .sdg-imapct>img {
         width: 100px;
         height: 100px;
