--- a/css/style.css
+++ b/css/style.css
@@ -412,9 +412,9 @@ body::-webkit-scrollbar {
 }
 
 .image-cover-class {
-	width: 100%;
-	height: 100%;
-	object-fit: cover;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 
@@ -1715,6 +1715,15 @@ body::-webkit-scrollbar {
 }
 
 @media (max-width: 375px) {
+
+
+    .right-side-bar {
+        display: none;
+    }
+
+    .section-first-container {
+        height: max-content;
+    }
 
     .sdg-imapct>img {
         width: 100px;
