--- a/css/style.css
+++ b/css/style.css
@@ -101,6 +101,7 @@ body::-webkit-scrollbar {
     text-decoration: none;
 }
 
+
 .section-first-container {
     font-size: 24px;
     height: 53vh;
@@ -1361,6 +1362,20 @@ body::-webkit-scrollbar {
 
 /* RESPONSIVE STYLES */
 
+/* menu js  */
+/* Hide mobile menu icon on desktop */
+.icon-menu-mobile {
+    display: none;
+    cursor: pointer;
+    z-index: 20000;
+}
+
+.right-side-bar.active {
+    background: white;
+}
+
+/* menu js  */
+
 @media (max-width: 1280px) {
 
     .sdg-container-imapct-tab {
@@ -1424,6 +1439,167 @@ body::-webkit-scrollbar {
 }
 
 @media (max-width: 991px) {
+
+    /* mobile screen  */
+
+    .btn-larne-more {
+        padding: 1rem 6rem 2rem 1rem;
+    }
+
+    /* .right-side-bar {
+        display: none;
+    } */
+
+    .section-first-container {
+        height: max-content;
+        grid-template-columns: 1fr;
+        padding: 2rem 1rem 1rem 1rem;
+    }
+
+    .card-info-container {
+        grid-template-columns: 1fr;
+        padding: 10px 1rem;
+        gap: 1rem;
+    }
+
+    .section-second-container {
+        padding: 0.5rem 1rem 1rem 1rem;
+        margin-top: 0rem;
+    }
+
+    .benifit-box-school-container {
+        grid-template-columns: 1fr;
+    }
+
+    .footer-container {
+        grid-template-columns: 1fr;
+        height: max-content;
+        padding: 2rem 1rem;
+        gap: 1rem;
+    }
+
+    .four-grid-container {
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    .container-benifit-school {
+        padding: 1rem 1rem 4rem 1rem;
+        gap: 1rem;
+    }
+
+    .changes-maker-section-index {
+        padding: 1rem 1rem 1rem 1rem;
+    }
+
+    .rcmi-embed-cdn {
+        /* height: max-content; */
+    }
+
+    .card-info-box {
+        grid-template-rows: 1fr;
+        gap: 1rem;
+    }
+
+    .navigation-bar {
+        padding: 1rem 1rem;
+    }
+
+    .title-section-1 {
+        font-size: 23px;
+        line-height: 38px;
+    }
+
+    .become-change-btn {
+        font-size: 14px;
+    }
+
+    .how-this-works-btn {
+        font-size: 14px;
+    }
+
+    .inner-section-container {
+        gap: 0rem;
+    }
+
+    .button-changes-container {
+        margin-top: 1rem;
+    }
+
+    .reallives-change-text {
+        font-size: 23px;
+    }
+
+
+    .image-height {
+        height: max-content !important;
+    }
+
+    .index-features-container {
+        padding: 1rem 1rem;
+    }
+
+    .icon-features-section-container {
+        gap: 1rem;
+    }
+
+    .description-features-bottom {
+        font-size: 15px;
+    }
+
+    .box-card-data {
+        gap: 2rem;
+    }
+
+    .title-of-card {
+        font-size: 17px;
+    }
+
+
+    .icon-card {
+        width: 30px;
+        height: 30px;
+    }
+
+    .header-title-side-text {
+        font-size: 15px;
+    }
+
+    .bottom-data-benifit-description {
+        font-size: 15px;
+    }
+
+    .benifit-box-school-container {
+        gap: 1rem;
+    }
+
+    .benifit-title-text {
+        font-size: 18px;
+        margin-bottom: 0rem;
+    }
+
+    .footer-descritpion-text {
+        font-size: 15px;
+    }
+
+    .benifit-cards-box {
+        gap: 0rem;
+    }
+
+    .footer-section-2 {
+        gap: 0rem;
+    }
+
+
+    .text-footer-label {
+        font-size: 15px;
+    }
+
+    .experience-text-reallives {
+        font-size: 20px;
+    }
+
+    /* mobile screen  */
+
     .sdg-container-imapct-tab {
         padding: 10px 1rem;
     }
@@ -1503,6 +1679,198 @@ body::-webkit-scrollbar {
 }
 
 @media (max-width: 800px) {
+
+    /* menu mobile  */
+
+    .icon-menu-mobile {
+        display: block;
+    }
+
+    .dropdown-content {
+        right: -8%;
+    }
+
+
+    .right-side-bar.nav-links a,
+    .right-side-bar.nav-links .dropdown {
+        display: none;
+    }
+
+    .right-side-bar.active.nav-links a,
+    .right-side-bar.active .dropdown {
+        display: block;
+        padding: 10px 0;
+    }
+
+    /* menu mobile  */
+
+
+    /* mobile screen  */
+
+    .btn-larne-more {
+        padding: 1rem 6rem 2rem 1rem;
+    }
+
+    .right-side-bar {
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 12px;
+        position: absolute;
+        right: 2%;
+        top: 83%;
+        padding: 12px;
+    }
+
+    .section-first-container {
+        height: max-content;
+        grid-template-columns: 1fr;
+        padding: 2rem 1rem 1rem 1rem;
+    }
+
+    .card-info-container {
+        grid-template-columns: 1fr;
+        padding: 10px 1rem;
+        gap: 1rem;
+    }
+
+    .section-second-container {
+        padding: 0.5rem 1rem 1rem 1rem;
+        margin-top: 0rem;
+    }
+
+    .benifit-box-school-container {
+        grid-template-columns: 1fr;
+    }
+
+    .footer-container {
+        grid-template-columns: 1fr;
+        height: max-content;
+        padding: 2rem 1rem;
+        gap: 1rem;
+    }
+
+    .four-grid-container {
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    .container-benifit-school {
+        padding: 1rem 1rem 4rem 1rem;
+        gap: 1rem;
+    }
+
+    .changes-maker-section-index {
+        padding: 1rem 1rem 1rem 1rem;
+    }
+
+    .rcmi-embed-cdn {
+        /* height: max-content; */
+    }
+
+    .card-info-box {
+        grid-template-rows: 1fr;
+        gap: 1rem;
+    }
+
+    .navigation-bar {
+        padding: 1rem 1rem;
+    }
+
+    .title-section-1 {
+        font-size: 23px;
+        line-height: 38px;
+    }
+
+    .become-change-btn {
+        font-size: 14px;
+    }
+
+    .how-this-works-btn {
+        font-size: 14px;
+    }
+
+    .inner-section-container {
+        gap: 0rem;
+    }
+
+    .button-changes-container {
+        margin-top: 1rem;
+    }
+
+    .reallives-change-text {
+        font-size: 23px;
+    }
+
+
+    .image-height {
+        height: max-content !important;
+    }
+
+    .index-features-container {
+        padding: 1rem 1rem;
+    }
+
+    .icon-features-section-container {
+        gap: 1rem;
+    }
+
+    .description-features-bottom {
+        font-size: 15px;
+    }
+
+    .box-card-data {
+        gap: 2rem;
+    }
+
+    .title-of-card {
+        font-size: 17px;
+    }
+
+
+    .icon-card {
+        width: 30px;
+        height: 30px;
+    }
+
+    .header-title-side-text {
+        font-size: 15px;
+    }
+
+    .bottom-data-benifit-description {
+        font-size: 15px;
+    }
+
+    .benifit-box-school-container {
+        gap: 1rem;
+    }
+
+    .benifit-title-text {
+        font-size: 18px;
+        margin-bottom: 0rem;
+    }
+
+    .footer-descritpion-text {
+        font-size: 15px;
+    }
+
+    .benifit-cards-box {
+        gap: 0rem;
+    }
+
+    .footer-section-2 {
+        gap: 0rem;
+    }
+
+
+    .text-footer-label {
+        font-size: 15px;
+    }
+
+    .experience-text-reallives {
+        font-size: 20px;
+    }
+
+    /* mobile screen  */
+
     .sdg-container-imapct-tab {
         padding: 10px 1rem;
     }
@@ -1583,11 +1951,45 @@ body::-webkit-scrollbar {
 
 @media (max-width: 700px) {
 
+    /* menu mobile  */
+
+    .icon-menu-mobile {
+        display: block;
+    }
+
+    .dropdown-content {
+        right: -8%;
+    }
+
+
+    .right-side-bar.nav-links a,
+    .right-side-bar.nav-links .dropdown {
+        display: none;
+    }
+
+    .right-side-bar.active.nav-links a,
+    .right-side-bar.active .dropdown {
+        display: block;
+        padding: 10px 0;
+    }
+
+    /* menu mobile  */
 
     /* mobile screen  */
 
+    .btn-larne-more {
+        padding: 1rem 6rem 2rem 1rem;
+    }
+
+
     .right-side-bar {
-        display: none;
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 12px;
+        position: absolute;
+        right: 2%;
+        top: 83%;
+        padding: 12px;
     }
 
     .section-first-container {
@@ -1788,10 +2190,46 @@ body::-webkit-scrollbar {
 
 @media (max-width: 650px) {
 
+    /* menu mobile  */
+
+    .icon-menu-mobile {
+        display: block;
+    }
+
+    .dropdown-content {
+        right: -8%;
+    }
+
+
+    .right-side-bar.nav-links a,
+    .right-side-bar.nav-links .dropdown {
+        display: none;
+    }
+
+    .right-side-bar.active.nav-links a,
+    .right-side-bar.active .dropdown {
+        display: block;
+        padding: 10px 0;
+    }
+
+    /* menu mobile  */
+
+
     /* mobile screen  */
 
+    .btn-larne-more {
+        padding: 1rem 6rem 2rem 1rem;
+    }
+
+
     .right-side-bar {
-        display: none;
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 12px;
+        position: absolute;
+        right: 2%;
+        top: 83%;
+        padding: 12px;
     }
 
     .section-first-container {
@@ -1970,11 +2408,45 @@ body::-webkit-scrollbar {
 
 @media (max-width: 570px) {
 
+    /* menu mobile  */
+
+    .icon-menu-mobile {
+        display: block;
+    }
+
+    .dropdown-content {
+        right: -8%;
+    }
+
+
+    .right-side-bar.nav-links a,
+    .right-side-bar.nav-links .dropdown {
+        display: none;
+    }
+
+    .right-side-bar.active.nav-links a,
+    .right-side-bar.active .dropdown {
+        display: block;
+        padding: 10px 0;
+    }
+
+    /* menu mobile  */
 
     /* mobile screen  */
 
+    .btn-larne-more {
+        padding: 1rem 6rem 2rem 1rem;
+    }
+
+
     .right-side-bar {
-        display: none;
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 12px;
+        position: absolute;
+        right: 2%;
+        top: 83%;
+        padding: 12px;
     }
 
     .section-first-container {
@@ -2149,11 +2621,44 @@ body::-webkit-scrollbar {
 
 @media (max-width: 530px) {
 
+    /* menu mobile  */
+
+    .icon-menu-mobile {
+        display: block;
+    }
+
+    .dropdown-content {
+        right: -8%;
+    }
+
+
+    .right-side-bar.nav-links a,
+    .right-side-bar.nav-links .dropdown {
+        display: none;
+    }
+
+    .right-side-bar.active.nav-links a,
+    .right-side-bar.active .dropdown {
+        display: block;
+        padding: 10px 0;
+    }
+
+    /* menu mobile  */
 
     /* mobile screen  */
 
+    .btn-larne-more {
+        padding: 1rem 6rem 2rem 1rem;
+    }
+
     .right-side-bar {
-        display: none;
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 12px;
+        position: absolute;
+        right: 2%;
+        top: 83%;
+        padding: 12px;
     }
 
     .section-first-container {
@@ -2316,11 +2821,44 @@ body::-webkit-scrollbar {
 
 @media (max-width: 480px) {
 
+    /* menu mobile  */
+
+    .icon-menu-mobile {
+        display: block;
+    }
+
+    .dropdown-content {
+        right: -8%;
+    }
+
+
+    .right-side-bar.nav-links a,
+    .right-side-bar.nav-links .dropdown {
+        display: none;
+    }
+
+    .right-side-bar.active.nav-links a,
+    .right-side-bar.active .dropdown {
+        display: block;
+        padding: 10px 0;
+    }
+
+    /* menu mobile  */
 
     /* mobile screen  */
 
+    .btn-larne-more {
+        padding: 1rem 6rem 2rem 1rem;
+    }
+
     .right-side-bar {
-        display: none;
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 12px;
+        position: absolute;
+        right: 2%;
+        top: 83%;
+        padding: 12px;
     }
 
     .section-first-container {
@@ -2483,10 +3021,45 @@ body::-webkit-scrollbar {
 @media (max-width: 450px) {
 
 
+    /* menu mobile  */
+
+    .icon-menu-mobile {
+        display: block;
+    }
+
+    .dropdown-content {
+        right: -8%;
+    }
+
+
+    .right-side-bar.nav-links a,
+    .right-side-bar.nav-links .dropdown {
+        display: none;
+    }
+
+    .right-side-bar.active.nav-links a,
+    .right-side-bar.active .dropdown {
+        display: block;
+        padding: 10px 0;
+    }
+
+    /* menu mobile  */
+
     /* mobile screen  */
 
+    .btn-larne-more {
+        padding: 1rem 6rem 2rem 1rem;
+    }
+
+
     .right-side-bar {
-        display: none;
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 12px;
+        position: absolute;
+        right: 2%;
+        top: 83%;
+        padding: 12px;
     }
 
     .section-first-container {
@@ -2649,11 +3222,45 @@ body::-webkit-scrollbar {
 
 @media (max-width: 440px) {
 
+    /* menu mobile  */
+
+    .icon-menu-mobile {
+        display: block;
+    }
+
+    .dropdown-content {
+        right: -8%;
+    }
+
+
+    .right-side-bar.nav-links a,
+    .right-side-bar.nav-links .dropdown {
+        display: none;
+    }
+
+    .right-side-bar.active.nav-links a,
+    .right-side-bar.active .dropdown {
+        display: block;
+        padding: 10px 0;
+    }
+
+    /* menu mobile  */
+
 
     /* mobile screen  */
 
+    .btn-larne-more {
+        padding: 1rem 6rem 2rem 1rem;
+    }
+
     .right-side-bar {
-        display: none;
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 12px;
+        position: absolute;
+        right: 2%;
+        top: 83%;
+        padding: 12px;
     }
 
     .section-first-container {
@@ -2816,11 +3423,45 @@ body::-webkit-scrollbar {
 
 @media (max-width: 400px) {
 
+    /* menu mobile  */
+
+    .icon-menu-mobile {
+        display: block;
+    }
+
+    .dropdown-content {
+        right: -8%;
+    }
+
+
+    .right-side-bar.nav-links a,
+    .right-side-bar.nav-links .dropdown {
+        display: none;
+    }
+
+    .right-side-bar.active.nav-links a,
+    .right-side-bar.active .dropdown {
+        display: block;
+        padding: 10px 0;
+    }
+
+    /* menu mobile  */
 
     /* mobile screen  */
 
+    .btn-larne-more {
+        padding: 1rem 6rem 2rem 1rem;
+    }
+
     .right-side-bar {
-        display: none;
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 12px;
+
+        position: absolute;
+        right: 2%;
+        top: 83%;
+        padding: 12px;
     }
 
     .section-first-container {
@@ -2983,10 +3624,45 @@ body::-webkit-scrollbar {
 
 @media (max-width: 390px) {
 
+
+    /* menu mobile  */
+
+    .icon-menu-mobile {
+        display: block;
+    }
+
+    .dropdown-content {
+        right: -8%;
+    }
+
+
+    .right-side-bar.nav-links a,
+    .right-side-bar.nav-links .dropdown {
+        display: none;
+    }
+
+    .right-side-bar.active.nav-links a,
+    .right-side-bar.active .dropdown {
+        display: block;
+        padding: 10px 0;
+    }
+
+    /* menu mobile  */
+
     /* mobile screen  */
 
+    .btn-larne-more {
+        padding: 1rem 6rem 2rem 1rem;
+    }
+
     .right-side-bar {
-        display: none;
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 12px;
+        position: absolute;
+        right: 2%;
+        top: 83%;
+        padding: 12px;
     }
 
     .section-first-container {
@@ -3150,10 +3826,45 @@ body::-webkit-scrollbar {
 @media (max-width: 375px) {
 
 
+    /* menu mobile  */
+
+    .icon-menu-mobile {
+        display: block;
+    }
+
+    .dropdown-content {
+        right: -8%;
+    }
+
+
+    .right-side-bar.nav-links a,
+    .right-side-bar.nav-links .dropdown {
+        display: none;
+    }
+
+    .right-side-bar.active.nav-links a,
+    .right-side-bar.active .dropdown {
+        display: block;
+        padding: 10px 0;
+    }
+
+    /* menu mobile  */
+
     /* mobile screen  */
 
+    .btn-larne-more {
+        padding: 1rem 6rem 2rem 1rem;
+    }
+
     .right-side-bar {
-        display: none;
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 12px;
+
+        position: absolute;
+        right: 2%;
+        top: 83%;
+        padding: 12px;
     }
 
     .section-first-container {
